# sayzo-agent

./: .env.example  .gitignore  CLAUDE.md  eloquy-agent.spec  entry.py  pyproject.toml  sayzo-agent.spec  v25_diff.txt
.claude/: settings.local.json
.github/workflows/: build.yml  check-notarization.yml
docs/: server-auth-spec.md  server-captures-spec.md
eloquy_agent/: __init__.py  __main__.py  app.py  config.py  conversation.py  pidfile.py  relevance.py  sink.py  speaker.py  stt.py  upload.py  vad.py
eloquy_agent/auth/: client.py  device.py  exceptions.py  pkce.py  server.py  store.py
eloquy_agent/capture/: __init__.py  mic.py  replay.py  system.py  system_mac.py
eloquy_agent/capture/sck-tap/: main.swift  sck-tap
eloquy_agent/gui/: __init__.py  tray.py
hooks/: hook-desktop_notifier.py  hook-webrtcvad.py  hook-webview.py
installer/: copy_draft.md  install.ps1  install.sh
installer/macos/: apply_update.sh  build_hud_disclaim_spawner.sh  build_sayzo_hud_wrapper.sh  com.eloquy.agent.plist  com.sayzo.agent.plist  entitlements.plist  hud_disclaim_spawner.c  sayzo_hud_wrapper.c
installer/macos/SayzoHud.app/Contents/: Info.plist
installer/windows/: eloquy-agent.nsi  sayzo-agent.nsi
installer/windows/nsis-plugins/: README.md
sayzo_agent/: __init__.py  __main__.py  aec.py  app.py  capture_poller.py  captures_index.py  comtypes_setup.py  config.py  consent_modal.py  conversation.py  diagnostics.py  dsp.py  echo_guard.py  idle.py  last_version.py  launch_source.py  loudness.py  macos_bundle_heal.py  models.py  notify.py  notify_mac_unsigned.py  onboarding.py  pidfile.py  relevance.py  retry.py  session_trim.py  settings_store.py  silero_onnx.py  sink.py  speaker.py  stt.py  update.py  update_apply.py  update_apply_mac.py  update_apply_win.py  update_stage.py  upload.py  upload_retry.py  vad.py
sayzo_agent/account/: __init__.py  cache.py  gate.py  status.py
sayzo_agent/arm/: __init__.py  audio_detect.py  controller.py  detectors.py  hotkey.py  hotkey_mac.py  platform_mac.py  platform_win.py  seen_apps.py
sayzo_agent/arm/audio-detect/: main.swift
sayzo_agent/auth/: __init__.py  client.py  device.py  exceptions.py  models.py  pkce.py  server.py  store.py
sayzo_agent/capture/: __init__.py  _utils.py  mic.py  queue_guard.py  replay.py  system_mac.py  system_win.py  system_win_process.py
sayzo_agent/capture/audio-tap/: main.swift
sayzo_agent/daily_drill/: __init__.py  api.py  copy.py  model.py  scheduler.py
sayzo_agent/gui/: fs.py  settings_window.py  shortcut_capture.py  theme.py  tray.py  widgets.py
sayzo_agent/gui/common/: __init__.py  assets.py  detectors.py  hotkey.py  login.py  mac_dock.py  mac_reopen.py  mac_shutdown.py  pywebview_patches.py  safe_quit.py  win_shutdown.py
sayzo_agent/gui/hud/: __init__.py  bridge.py  js_escape.py  launcher.py  shutdown_hooks.py  window.py
sayzo_agent/gui/settings/: __init__.py  bridge.py  ipc.py  lockfile.py  window.py
sayzo_agent/gui/setup/: __init__.py  bridge.py  detect.py  launchd.py  mac_permissions.py  marker.py  model_download.py  win_permissions.py  window.py
sayzo_agent/gui/webui/: .env.mock  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
sayzo_agent/gui/webui/src/: App.tsx  HudApp.tsx  index.css  main.tsx
sayzo_agent/gui/webui/src/assets/: onboarding-previews.md
sayzo_agent/gui/webui/src/components/: Layout.tsx  ShortcutCapture.tsx
sayzo_agent/gui/webui/src/hud/: ActionableToast.tsx  ConsentCard.tsx  DotIndicator.tsx  GripDots.tsx  HudCard.tsx  HudShell.tsx  InfoToast.tsx  InsightCard.tsx  SayzoBrand.tsx  StatePill.tsx  Waveform.tsx
sayzo_agent/gui/webui/src/lib/: bridge.ts  captures-mock.ts  cn.ts  events.ts  hud-bridge.ts  mock-bridge-init.ts  settings-bridge.ts  useCopyToClipboard.ts  useCountdownTimer.ts  usePaintedSignal.ts
sayzo_agent/gui/webui/src/screens/: Accessibility.tsx  AudioCapture.tsx  Automation.tsx  Done.tsx  (+10 more)
scripts/: diagnose_aec.py  diagnose_dsp_static.py  diagnose_loudness.py  pipeline_lab.py  prebake_comtypes.py  preview_finish_signup.ps1  preview_gui.py  preview_hud.py  preview_login_callback.py  probe_audio.py  probe_audio_levels.py  probe_capture_sessions.py  probe_disarm_arm_cycle.py  probe_disclaim_spawn.py  probe_hud_waveform.py  probe_mac_audio_tap_rate.py  probe_macos_hud_load.py  probe_macos_hud_proc_state.py  probe_macos_hud_visibility.py  probe_meeting_detection.py  probe_silence_pump.py  probe_v17_scenarios.py  probe_vad_flush.py  probe_vad_timestamps.py  probe_win_loopback_cycles.py  repro_settings_race.py  run_macos_hud_proc_state_diff.sh  sync_brand_assets.py  synth_double_talk_test.py  validate_disclaim_fix.sh  validate_helper_app.sh  verify_vad_refactor.md
scripts/mac_probes/: 01_mic_active.py  02_audio_processes.py  03_foreground_running_titles.py  04_match_simulation.py  05_browser_url_attempts.py  06_all_input_devices.py  07_swift_audio_detect.swift  08_full_detect.py  README.md  _common.py
tests/: _http_helpers.py  test_account_cache.py  test_account_gate.py  test_account_status.py  test_aec.py  test_arm_controller.py  test_audio_detect.py  test_capture_poller.py  test_captures_index.py  test_consent_modal.py  test_conversation.py  test_daily_drill_api.py  test_daily_drill_copy.py  test_daily_drill_model.py  test_daily_drill_scheduler.py  test_diagnostics.py  test_dsp.py  test_echo_guard.py  test_hotkey_platform_dispatch.py  test_hud_js_dispatch.py  test_hud_launcher.py  test_ipc.py  test_last_version.py  test_launch_source.py  test_launchd.py  test_loudness.py  test_meeting_detectors.py  test_notify.py  test_pidfile.py  test_pkce_reentry.py  test_queue_guard.py  test_retry.py  test_seen_apps.py  test_session_trim.py  test_settings_bridge_captures.py  test_settings_bridge_update.py  test_settings_store.py  test_shutdown_propagation.py  test_sink.py  test_speaker.py  (+9 more)
tests/gui/: test_detect.py  test_hud_shutdown.py  test_mac_permissions.py  test_marker.py  test_model_download.py  test_pywebview_patches.py  test_safe_quit.py  test_settings_dispatch_quit.py  test_win_permissions.py  test_win_shutdown.py
(+17 files in other folders)
