[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sayzo-agent"
version = "3.16.0"
description = "Armed-only capture agent for Sayzo — records meetings on user consent (hotkey or whitelisted meeting app), uploads raw stereo OGG Opus to the server, polls for the post-transcription title/summary."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    # noisereduce: spectral-gate denoise applied at session close (see dsp.py).
    # Pure numpy/scipy — pulls matplotlib transitively (used only by its
    # optional plotting helpers, which we never import).
    "noisereduce>=3.0",
    # WebRTC AEC3 via livekit.rtc.apm. The base `livekit` PyPI package
    # bundles the WebRTC AudioProcessingModule (same engine as Chrome/
    # Meet) with prebuilt FFI binaries for Windows + macOS (arm64 +
    # x86_64) + Linux. Apache-2.0. NOT `livekit-agents` or `livekit-api`
    # — those drag in aiohttp/asyncio room signaling we don't need.
    # See sayzo_agent/aec.py.
    "livekit>=1.1",
    "sounddevice>=0.4.6",
    "PyAudioWPatch>=0.2.12; sys_platform == 'win32'",
    "silero-vad>=5.1",
    # Direct deps (not transitive of silero-vad) so accidental graph
    # changes can't drop them. Pinned to 2.x for silero-vad JIT model
    # compatibility. Imported directly in vad.py + echo_guard.py.
    "torch>=2.0",
    "torchaudio>=2.0",
    "av>=12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.7",
    "pystray>=0.19",
    "Pillow>=10.0",
    # Native notifications were retired in v2.10 in favor of the custom
    # HUD overlay (sayzo_agent/gui/hud/). The old `desktop-notifier`
    # dep, the `MacUnsignedNotifier` fallback, and the
    # `osascript display dialog` consent path are all gone — see
    # `project_custom_hud_shipped` in the auto-memory.
    "pywebview>=5.3,<6",
    # HUD subprocess (v2.11+) runs on PySide6 + QtWebEngine instead of
    # pywebview so we get genuine per-pixel alpha transparency on
    # Windows 10+ (Qt's WA_TranslucentBackground hits Chromium's
    # compositor the same way Electron does — no chromakey-click bug,
    # no SetWindowRgn pixelation, no Win11-only DWM fallback). Settings
    # and Setup keep pywebview because they don't need transparency.
    # PySide6 is LGPL — fine for commercial use. PySide6-Addons pulls
    # in QtWebEngineWidgets (~120 MB Chromium runtime).
    "PySide6>=6.7,<7",
    "PySide6-Addons>=6.7,<7",
    # Armed-only capture model (v1.0+).
    # Global hotkey listener + process / window queries.
    "pynput>=1.7",
    "psutil>=5.9",
    # Windows: mic-holder detection via WASAPI audio sessions, foreground
    # window via Win32.
    "pycaw>=20240210; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
    # Windows: active-browser-tab URL read via UIAutomation. Used by
    # platform_win.get_browser_tab_url / get_browser_window_urls so
    # user-added web meeting URLs (custom detectors) actually match
    # without needing hand-authored title regex fallbacks. Pure-Python
    # comtypes wrapper; comtypes itself is already pulled in by pycaw.
    "uiautomation>=2.0; sys_platform == 'win32'",
    # macOS: NSWorkspace frontmost-app query via AppKit (Cocoa); AX browser
    # window-title + URL reads via ApplicationServices (kAXWindowsAttribute,
    # AXURL on AXWebArea, etc.). Per-process mic attribution is owned by
    # the audio-detect Swift helper now (v2.5+) — pyobjc-framework-CoreAudio
    # was dropped in v2.5 along with the legacy ctypes-CoreAudio path.
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
    # macOS: AVCaptureDevice authorization status / requestAccess for the
    # Microphone TCC dialog. Used by gui/setup/mac_permissions.prompt_microphone
    # to read and trigger the real TCC decision (the legacy sounddevice-open
    # heuristic happily reported "granted" while the dialog was still showing
    # and even when the OS had silently denied — bug v2.6.0).
    "pyobjc-framework-AVFoundation>=10.0; sys_platform == 'darwin'",
    # macOS: SMAppService.agent registration so the BTM "running in the
    # background" notification + System Settings -> Login Items entry are
    # attributed to the Sayzo app, not to the Developer-ID team identity.
    # Used by sayzo_agent/gui/setup/launchd.py.
    "pyobjc-framework-ServiceManagement>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sayzo-agent = "sayzo_agent.__main__:cli"

[tool.setuptools.packages.find]
include = ["sayzo_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
